# asset-hub

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  config.yml
.github/workflows/: ci.yml  e2e.yml  release-desktop.yml
design-system/asset-hub/: MASTER.md
docs/: deployment.md
docs/superpowers/: followup-allocation.md  followups-m2c3-smoketest.md  release-notes-m2c3.md  release-notes-m2c4.md  release-notes-m2d.md  release-notes-v1.0.md  release-notes-v2.0.md  release-notes-v2.1.0.md  release-notes-v2.2.0.md  release-notes-v2.2.1.md  release-notes-v2.3.0.md  release-notes-v2.3.1.md  release-notes-v2.4.1.md  release-notes-v2.4.2.md  simplify-followups.md
examples/types/: bus_interface.json  bus_logger.json  gpu.json  laptop.json  workstation.json
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/e2e/: global-setup.ts  global-teardown.ts
frontend/scripts/: gen-openapi.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/tests/: msw-handlers.ts  setup.ts
packaging/: asset_hub.spec  desktop_entry.py
references/: deploy.md  envelope.md  transitions.md  workflows.md
scripts/: dev.sh  sync-labels.sh
src/asset_hub/: config.py  db.py  errors.py  migrate.py  runtime.py
tests/: conftest.py
tests/api/: conftest.py  test_asset_routes.py  test_attachment_routes.py  test_checkout_routes.py  test_checkout_routes_return_fields.py  test_datetime_serialization.py  test_error_envelope.py  test_export_routes.py  test_fields_mask.py  test_health.py  test_spa_mount.py  test_state_change_endpoint.py  test_stats_router.py  test_transition_undo_api.py  test_transitions.py  test_type_routes.py  (+2 more)
tests/cli/: conftest.py  (+18 more)
(+405 files in other folders)
