[project]
name = "asset-hub"
version = "2.4.1"
description = "小组资产管理工具"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7",
    "typer>=0.15,<0.30",
    "rich>=13.9",
    "python-multipart>=0.0.19",
    "openpyxl>=3.1",
    "alembic>=1.18.4",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
desktop = ["pywebview>=5"]

[project.scripts]
asset-hub = "asset_hub.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asset_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # ruff format 负责行长控制

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
]
packaging = ["pyinstaller>=6"]
